day5/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: day5
  labels:
    course: kubernetes-zero-to-hero
    module: day5
