day5/manifests/07-egress-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: egress-client
  namespace: day5
  labels:
    app: egress-client
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox:1.36
      command:
        - sleep
        - "3600"
