day5/manifests/02-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: day5
  labels:
    app: payments
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
