day5/manifests/04-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: day5
  labels:
    app: orders
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
